Fix: Use the correct constructor after saving for Jira Cloud.